--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ body{
 
 .taInput{
     width : 98%;
-    height : 360px;
+    height : 340px;
 }
 
 .genericButton{
@@ -52,6 +52,7 @@ body{
     background-color : black;
     border : 2px solid white;
     font-size : 16px;
+    margin : 5px;
 }
 
 #backButton{
